--- a/app/scss/_about.scss
+++ b/app/scss/_about.scss
@@ -25,7 +25,7 @@
 }
 .parallax__aqua__1 {
     background: url(../img/about/m_1.jpg) no-repeat;
-    background-size: 100%;
+    background-size: cover;
 }
 .parallax__aqua__3 {
     background: url(../img/about/downicon.png)top center no-repeat;
