--- a/app/scss/_relax.scss
+++ b/app/scss/_relax.scss
@@ -1,5 +1,5 @@
 .header-price{
-    height: 88vh;
+    min-height: 88vh;
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-position: center center;
