--- a/app/scss/_relax.scss
+++ b/app/scss/_relax.scss
@@ -52,7 +52,7 @@
     ::after{
         content: "";
         background-image: url(../img/Down-Arrows.svg);
-        left: 1205px;
+        left: 985px;
         top: 16px;
         width: 30px; 
         height: 30px; 
@@ -66,7 +66,7 @@
     .slider-dots__clicks{
         position: absolute;
         top: 15px;
-        left: 1235px;
+        left: 1010px;
     }
 }
 .relax-panel__heading.in p::after{
@@ -91,9 +91,6 @@
 .relax-slider__btn {
     button{
         border: none;
-    }
-    .btn{
-        cursor: pointer;
     }
     text-align: center;
     padding: 191px 0px 30px 0px;
@@ -266,8 +263,8 @@ input[type=number]
     justify-content: center;
     align-items: center;
     position: relative;
-    width: 20px;
-    height: 20px;
+    max-width: 20px;
+    max-height: 20px;
     &:hover{
         box-shadow: 0px 1px 5px $blue;
         transition: .4s;
@@ -292,7 +289,7 @@ input[type=number]
 
 .quantity-button.quantity-down {
     position: absolute;
-    top: 80px;
+    top: 90px;
     right: 50px;
 }
 
