--- a/app/scss/_shop.scss
+++ b/app/scss/_shop.scss
@@ -2,6 +2,7 @@
     background-image: url(../img/shop/bg.png);
     background-position: right center;
     background-repeat: no-repeat;
+    margin-top: -120px;
     .title h3 {
         right: 186px;
     }
@@ -179,8 +180,7 @@
     padding-bottom: 10px;
 }
 .shop{
-    .contact-form{
-      display: none;
+    .contact-forhop{
       top: 631%;
       background-color: rgba(2, 12, 22, 0.65);
     }
@@ -188,10 +188,12 @@
         padding: 0.5em 3em;
     }
     .shop__slider__btn {
-        button{
-            border: none;
-            cursor: pointer;
-        }
+       text-transform: uppercase;
+       color: #ffffff;
+       opacity: 0.5;
+       h3{
+        font-weight: 300;
+       }
     }
     .relax__arrows{
         display: none;
