--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -110,7 +110,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(3, 24, 92, 0.877);
+    background-color: rgb(3, 24, 92);
     backdrop-filter: blur(10px);
     padding: 221px 10px 50px 537px;
     transition: all .6s;
