--- a/app/scss/_relax.scss
+++ b/app/scss/_relax.scss
@@ -266,8 +266,8 @@ input[type=number]
     max-width: 20px;
     max-height: 20px;
     &:hover{
-        box-shadow: 0px 1px 5px $blue;
-        transition: .4s;
+        transition: .3s;
+        transform: scale(1.3);
     }
 }
 .slider-dots__clicks{
@@ -283,13 +283,15 @@ input[type=number]
 
 .quantity-button.quantity-up {
     position: absolute;
+    cursor: pointer;
     top: 80px;
     right: 0;
 }
 
 .quantity-button.quantity-down {
     position: absolute;
-    top: 90px;
+    cursor: pointer;
+    top: 80px;
     right: 50px;
 }
 
