--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -172,7 +172,7 @@
 .header{ 
     position: relative;
     height: 100vh;
-    background: url(../img/header-bg.jpg)0 0 no-repeat;
+    background: url(../img/headr/header-bg.jpg)0 0 no-repeat;
     background-size: cover;
     .slider-arrows{
         top: 160px;
@@ -192,7 +192,7 @@
         position: absolute;
         width: 18px;
         height: 20px;
-        background: url(../img/POI.svg) no-repeat ;
+        background: url(../img/iconpoi.svg) no-repeat ;
         left: -3px;
         bottom: -5px;
     }
