--- a/app/scss/_sport.scss
+++ b/app/scss/_sport.scss
@@ -1,6 +1,6 @@
 .sport{
     padding: 160px 0 70px;
-    background: url(../img/sport-bg.jpg) 0 0 no-repeat;
+    background: url(../img/sport/sport-bg.jpg) 0 0 no-repeat;
     background-size: cover;
     position: relative;
     border-top: 1px solid rgba(255,255,255,0.26);
@@ -106,7 +106,7 @@
 .slider-map{
     max-width: 1400px;
     min-height: 635px;
-    background-image: url(../img/sport-map.png);
+    background-image: url(../img/sport/sport-map.png);
     background-repeat: no-repeat;
     background-size: 635px;
     background-position: center;
