--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -1,32 +1,39 @@
-html{
+html {
     box-sizing: border-box;
 }
+
 *,
 *::before,
-*::after{
+*::after {
     box-sizing: inherit;
 }
-body{
+
+body {
     font-family: 'Fira Sans', sans-serif;
     font-weight: 400;
-    background-color: rgb(2, 12, 22);
+    background-color: $bg;
     color: #FFFFFF;
     min-width: 320px;
     overflow-x: hidden;
 }
-a{
+
+a {
     display: inline-block;
     text-decoration: none;
     color: #FFFFFF;
 }
-ul, li{
+
+ul,
+li {
     list-style-type: none;
     margin: 0;
     padding: 0;
 }
-.title{
+
+.title {
     text-transform: uppercase;
-    span{
+
+    span {
         display: inline-block;
         position: relative;
         font-size: 200px;
@@ -34,7 +41,8 @@ ul, li{
         color: #ffffff10;
         transform: translateX(-50px);
     }
-    h3{
+
+    h3 {
         border-top: 1px solid $blue;
         border-bottom: 1px solid $blue;
         position: absolute;
@@ -44,11 +52,13 @@ ul, li{
         margin: 0;
         color: #fff;
     }
-} 
-.container{
+}
+
+.container {
     max-width: 1920px;
     margin: 0 auto;
 }
+
 .suptitle-left {
     font-size: 22px;
     line-height: 32px;
@@ -59,7 +69,8 @@ ul, li{
     padding-left: 103px;
     position: relative;
     display: inline-block;
-    &::before{
+
+    &::before {
         content: "";
         position: absolute;
         width: 50px;
@@ -69,6 +80,7 @@ ul, li{
         top: 50%;
     }
 }
+
 .suptitle-right {
     font-size: 22px;
     line-height: 32px;
@@ -79,7 +91,8 @@ ul, li{
     padding-right: 103px;
     position: relative;
     display: inline-block;
-    &::before{
+
+    &::before {
         content: "";
         position: absolute;
         width: 80px;
@@ -89,39 +102,45 @@ ul, li{
         top: 50%;
     }
 }
-.subtitle__head{
+
+.subtitle__head {
     font-weight: 800;
     font-size: 40px;
     text-transform: uppercase;
     display: inline-block;
     padding: 0px 5px 0px 0px;
-    span{
+
+    span {
         font-weight: 100;
         opacity: 0.5;
     }
 }
+
 .descr {
     display: inline-block;
     padding: 0 0 0 5px;
     margin: -15px 0 0 0;
 }
-.descr__head{
+
+.descr__head {
     font-weight: 800;
     font-size: 40px;
     text-transform: uppercase;
     padding: 0px 5px 0px 0px;
-    span{
+
+    span {
         font-weight: 100;
     }
 }
+
 // - - - btn - - -//
 .btn {
-	-webkit-transition: all 200ms cubic-bezier(0.390, 0.500, 0.150, 1.360);
-	-moz-transition: all 200ms cubic-bezier(0.390, 0.500, 0.150, 1.360);
-	-ms-transition: all 200ms cubic-bezier(0.390, 0.500, 0.150, 1.360);
-	-o-transition: all 200ms cubic-bezier(0.390, 0.500, 0.150, 1.360);
+    -webkit-transition: all 200ms cubic-bezier(0.390, 0.500, 0.150, 1.360);
+    -moz-transition: all 200ms cubic-bezier(0.390, 0.500, 0.150, 1.360);
+    -ms-transition: all 200ms cubic-bezier(0.390, 0.500, 0.150, 1.360);
+    -o-transition: all 200ms cubic-bezier(0.390, 0.500, 0.150, 1.360);
     transition: all 200ms cubic-bezier(0.390, 0.500, 0.150, 1.360);
-    
+
     display: block;
     margin: 20px auto;
     max-width: 180px;
@@ -130,27 +149,30 @@ ul, li{
     padding: 20px 30px;
     text-transform: uppercase;
     color: #FFFFFF;
-	box-shadow: $blue 0 0px 0px 2px inset;
+    box-shadow: $blue 0 0px 0px 2px inset;
     transition: .5s;
     background-color: rgba(0, 0, 0, 0.226);
     outline: none;
-    span{
+
+    span {
         font-weight: 100;
     }
-    &:hover{
-    color: #FFFFFF;
-    box-shadow: rgba(74, 154, 246, 0.541) 0 80px 0px 2px inset;
-    transition: .5s;
+
+    &:hover {
+        color: #FFFFFF;
+        box-shadow: rgba(74, 154, 246, 0.541) 0 80px 0px 2px inset;
+        transition: .5s;
     }
 }
+
 // - - - button - - -//
-.button{
+.button {
     -webkit-transition: all 200ms cubic-bezier(0.390, 0.500, 0.150, 1.360);
     -moz-transition: all 200ms cubic-bezier(0.390, 0.500, 0.150, 1.360);
     -ms-transition: all 200ms cubic-bezier(0.390, 0.500, 0.150, 1.360);
     -o-transition: all 200ms cubic-bezier(0.390, 0.500, 0.150, 1.360);
     transition: all 200ms cubic-bezier(0.390, 0.500, 0.150, 1.360);
-    
+
     display: block;
     margin: 20px auto;
     max-width: 180px;
@@ -162,26 +184,31 @@ ul, li{
     box-shadow: $blue 0 0px 0px 2px inset;
     transition: .5s;
     outline: none;
-    span{
+
+    span {
         font-weight: 100;
     }
-    &:hover{
-    box-shadow: $blue 0 0px 0px 40px inset;
-    transition: .5s;
+
+    &:hover {
+        box-shadow: $blue 0 0px 0px 40px inset;
+        transition: .5s;
     }
 }
-.slider-arrows{
+
+.slider-arrows {
     position: absolute;
     top: 40px;
     right: 106px;
     cursor: pointer;
     z-index: 4;
     width: 30px;
-    &:hover{
+
+    &:hover {
         transition: .3s;
         transform: scale(1.3);
     }
 }
-.slider-arrows__left{
+
+.slider-arrows__left {
     right: 151px;
 }
